# benchmarks

./: EitherVsCodensityVsCPSEither.hcr  EitherVsCodensityVsCPSEither.hs  FileCollection.hs  SortingVectorImprovesCPUPipelineUse.hs  StrictFoldlBeatsOthers.hs  benchmarks.cabal  stack.yaml
bench/: CompareFileContents.hs  ReadHex.hs
src/: Utils.hs
