name:                benchmarks
version:             0.1
synopsis:            TODO
description:         TODO
license:             BSD3
-- license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:       >= 1.16
build-type:          Simple

library
  exposed-modules:   Utils
  build-depends:     base, directory, filepath, criterion
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -W -Wall -fwarn-monomorphism-restriction -ferror-spans

executable           SortingVectorImprovesCPUPipelineUse
  build-depends:     base, criterion, vector, random-fu, random-source, benchmarks
  main-is:           SortingVectorImprovesCPUPipelineUse.hs
  default-language:  Haskell2010
  ghc-options:       -O2 -W -Wall -fwarn-monomorphism-restriction -ferror-spans -rtsopts

executable           StrictFoldlBeatsOthers
  build-depends:     base, criterion, deepseq, benchmarks
  main-is:           StrictFoldlBeatsOthers.hs
  default-language:  Haskell2010
  ghc-options:       -O2 -W -Wall -fwarn-monomorphism-restriction -ferror-spans -rtsopts
