name:
  benchmarks
version:
  0.1
synopsis:
  TODO
description:
  TODO
license:
  BSD3
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:
  >= 1.16
build-type:
  Simple

library
  exposed-modules:
    Utils
  build-depends:
    base, directory, filepath, criterion
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -ferror-spans
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable sorting-vector-improves-cpu-pipeline-use
  build-depends:
    base, criterion, vector, random-fu, random-source, benchmarks
  main-is:
    SortingVectorImprovesCPUPipelineUse.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable strict-foldl-beats-others
  build-depends:
    base, criterion, deepseq, benchmarks
  main-is:
    StrictFoldlBeatsOthers.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable either-vs-codensity-vs-cps-either
  build-depends:
    base, mtl, criterion, deepseq, benchmarks
  main-is:
    EitherVsCodensityVsCPSEither.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable file-collection
  build-depends:
    base, dlist, filepath, directory, criterion, deepseq, benchmarks
  main-is:
    FileCollection.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
    -- -ddump-simpl
    -- -dsuppress-uniques
    -- -dsuppress-idinfo
    -- -dsuppress-module-prefixes
    -- -dsuppress-type-applications
    -- -dsuppress-coercions
    -- -dppr-cols200
-- "-dsuppress-type-signatures"
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable read-hex
  build-depends:
    base, dlist, filepath, directory, criterion, deepseq, benchmarks
  main-is:
    bench/ReadHex.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
    -main-is ReadHex
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

executable compare-file-contents
  build-depends:
    base,
    benchmarks,
    bytestring,
    criterion,
    deepseq,
    directory,
    dlist,
    filepath,
    temporary,
    text
  main-is:
    bench/CompareFileContents.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
    -rtsopts
    -main-is CompareFileContents
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
